--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
+boto3==1.9.200
+botocore==1.12.200
 Django==1.11.16
+django-storages==1.7.1
+docutils==0.14
+futures==3.3.0
+jmespath==0.9.4
 psycopg2==2.8.3
+python-dateutil==2.8.0
 pytz==2019.2
+s3transfer==0.2.1
+six==1.12.0
+urllib3==1.25.3
