--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 boto3==1.9.200
 botocore==1.12.200
 Django==1.11.16
+django-extensions==2.2.1
 django-storages==1.7.1
+djangorestframework==3.9.4
 docutils==0.14
 futures==3.3.0
 jmespath==0.9.4
@@ -10,4 +12,5 @@ python-dateutil==2.8.0
 pytz==2019.2
 s3transfer==0.2.1
 six==1.12.0
+typing==3.7.4
 urllib3==1.25.3
